--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@ html,body {
 .login-box {
 	width: 100%;
 	max-width:500px;
-	height: 400px;
+	height: 450px;
 	position: absolute;
 	top: 50%;
 	margin-top: -200px;
@@ -41,12 +41,12 @@ html,body {
 .form {
 	width: 100%;
 	max-width:500px;
-	height: 275px;
+	height: 325px;
 	margin: 25px auto 0px auto;
 	padding-top: 25px;
 }
 .login-content {
-	height: 300px;
+	height: 350px;
 	width: 100%;
 	max-width:500px;
 	background-color: rgba(255, 250, 2550, .6);
@@ -83,7 +83,8 @@ html,body {
 	font-size: 16px !important;
 }
 body{
-background: url("http://imgur.com/1l2D1RS.jpg"); background-repeat: no-repeat;background-size:cover;}
+    background: url("http://imgur.com/1l2D1RS.jpg") no-repeat;
+    background-size:cover;}
 </style>
 
 </head>
@@ -115,6 +116,17 @@ background: url("http://imgur.com/1l2D1RS.jpg"); background-repeat: no-repeat;ba
                             <div class="input-group">
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
                                 <input type="password" id="password" name="password" class="form-control" placeholder="密码">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12  ">
+                            <div class="input-group">
+                                <span class="input-group-addon"><span class="glyphicon glyphicon-filter"></span></span>
+                                <select class="form-control" name="type">>
+                                    <option value ="0">学生</option>
+                                    <option value ="1">老师</option>
+                                </select>
                             </div>
                         </div>
                     </div>
