--- a/static/css/teacher/sb-admin.css
+++ b/static/css/teacher/sb-admin.css
@@ -7,6 +7,7 @@
 /* Global Styles */
 
 body {
+    font-family: "微软雅黑";
     margin-top: 100px;
     background-color: #222;
 }
@@ -23,7 +24,7 @@ body {
 
 #page-wrapper {
     width: 100%;
-    height:initial;
+    height:100%;
     padding: 0;
     background-color: #fff;
 }
