--- a/static/css/sb-admin.css
+++ b/static/css/sb-admin.css
@@ -9,7 +9,7 @@
 body {
     font-family: "微软雅黑";
     margin-top: 100px;
-    background-color: #222;
+    /*background-color: #222;*/
 }
 
 @media(min-width:768px) {
